// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (YAML) should prepend YAML block to start of page 1`] = `
"---
title: \\"Class: SomeClass\\"
linkTitle: \\"SomeClass\\"
slug: \\"someclass\\"
---

CONTENTS"
`;

exports[`Theme: (YAML) should set entry page with a readme 1`] = `
"---
title: \\"Readme\\"
linkTitle: \\"Readme\\"
slug: \\"_index\\"
---

CONTENTS"
`;

exports[`Theme: (YAML) should set entry page without a readme 1`] = `
"---
title: \\"Test API\\"
linkTitle: \\"Test API\\"
slug: \\"_index\\"
---

CONTENTS"
`;

exports[`Theme: (YAML) should set modules page 1`] = `
"---
title: \\"Test API\\"
linkTitle: \\"Test API\\"
slug: \\"modules\\"
---

CONTENTS"
`;

exports[`Theme: (branch bundles) should write classes _index.md 1`] = `
"---
title: \\"Classes\\"
---"
`;

exports[`Theme: (branch bundles) should write interfaces _index.md 1`] = `
"---
title: \\"Interfaces\\"
---"
`;

exports[`Theme: should getUrls' 1`] = `
Array [
  "modules.md",
  "modules.md#declarationitema",
  "modules.md#declarationitemb",
  "modules.md#functionitema",
  "modules.md#functionitemb",
  "_index.md",
  "modules.md#declarationitema",
  "modules.md#declarationitemb",
  "modules.md#functionitema",
  "modules.md#functionitemb",
  "modules/namespaceA.md",
  "classes/namespaceA.SomeNestedClass.md",
  "classes/namespaceA.SomeNestedClass.md#constructor",
  "modules/namespaceB.md",
  "enums/enumItemA.md",
  "enums/enumItemB.md",
  "classes/ClassItemA.md",
  "classes/ClassItemA.md#constructor",
  "classes/ClassItemB.md",
  "classes/ClassItemB.md#constructor",
  "interfaces/InterfaceItemA.md",
  "interfaces/InterfaceItemA.md#prop",
  "interfaces/InterfaceItemB.md",
  "interfaces/InterfaceItemB.md#prop",
]
`;
